Changes in 0.1.5
================

Fixed:
* Refactoring unintentionally broke registering new repo webhooks (#14)

Meta:
* PyPI package description should be rendered to HTML now (fixed content-type)

Changes in 0.1.4
================

Changed:
* "GitHub" is now properly capitalized everywhere in text output. (#9)
* Usage output uses `help_prefix` from config instead of hardcoded `.` (#12)

Fixed:
* git.io shortening was cutting off GET parameters of input links. (#11)


Changes in 0.1.3
================

Meta:
* Moved to Sopel organization on Github; new maintainer.

Changed:
* Uses requests instead of deprecated sopel.web functions. (Sopel itself
  requires requests, so we don't have to.)
* Fetched git.io links use HTTPS now.