@@ -7,6 +7,7 @@ Fixed:
 Meta:
 * PyPI package description should be rendered to HTML now (fixed content-type)
 
+
 Changes in 0.1.4
 ================
 
@@ -22,7 +23,7 @@ Changes in 0.1.3
 ================
 
 Meta:
-* Moved to Sopel organization on Github; new maintainer.
+* Moved to Sopel organization on GitHub; new maintainer.
 
 Changed:
 * Uses requests instead of deprecated sopel.web functions. (Sopel itself
